# TestNewAPI

MVC-DevOps/CI-CD/API/: CMakeLists.txt  Dockerfile  config.json  main.cpp
MVC-DevOps/CI-CD/PostgreSQL/: Dockerfile  tempDB.txt
